--- a/02-BASES/package.json
+++ b/02-BASES/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
-    "dev":"nodemon src/app.js",
+    "dev": "nodemon src/app.js",
     "start:dev": "echo 'Hello world from dev'",
     "start:stag": "echo 'Hello world from stag'"
   },
@@ -14,5 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.3"
+  },
+  "dependencies": {
+    "axios": "^1.6.7",
+    "uuid": "^9.0.1"
   }
 }
