--- a/02-BASES-TYPESCRIPT/tsconfig.json
+++ b/02-BASES-TYPESCRIPT/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compileOnSave": true,
-  "include": ["tests/**/*.ts"],
+  "include": ["tests/**/*.ts","./src", "./scripts"],
   "exclude": ["node_modules"],
 
   "compilerOptions": {
@@ -37,6 +37,7 @@
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
 
     "typeRoots": [
+      "@types",
       "node_modules/@types"
     ] /* Specify multiple folders that act like './node_modules/@types'. */,
 
