--- a/02-BASES-TYPESCRIPT/tsconfig.json
+++ b/02-BASES-TYPESCRIPT/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": true,
   "include": ["tests/**/*.ts","./src", "./scripts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules","**/*.spec.ts","**/*.test.ts"],
 
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
