--- a/04-MULTIPLICATION/tsconfig.json
+++ b/04-MULTIPLICATION/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "exclude": ["node_modules"],
+  //Now I need to exclude all files have the world test
+  "exclude": ["node_modules", "dist"],
   "include": ["src/**/*"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
